# medication_retriever_evaluator

./: Acetaminophen_evaluation.json  Acetaminophen_evaluation_report.txt  README.md  demo_evaluation.py  demo_models.py  evaluation_report.json  my_acetaminophen_eval.json  pyproject.toml  requirements.txt  test_evaluation_Acetaminophen.json  test_pipeline.py
livertox/: Amitriptyline.xml  Cardizepam.xml  Dermacillin.xml  Endocrinex.xml  Gastrozine.xml  Hematolix.xml  HepC.xml  Hepatrofin.xml  Immunexor.xml  Neuroxalin.xml  Pulmoxate.xml  Renalyte.xml
src/: config.py  evaluator.py  models.py  pipeline.py  retriever.py  xml_parser.py
